footer-fix
extra margin on the footer-logo was causing wonky mobile breakpoint

--- a/css/style.css
+++ b/css/style.css
@@ -1490,8 +1490,7 @@ footer {
 }
 .footer-logo {
 	display: block;
-	margin-bottom: 2px;
-    margin-top: 1px;
+  margin-top: 1px;
 }
 .footer-logo img {
 	width: 90px;
